Changes for webapp3-plugin namimg convention

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp3-select-cart-plugin",
+  "name": "webapp3-plugin-select-cart",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,6 +16,7 @@
   "dependencies": {
     "@pexip/components": "^16.17.0",
     "@pexip/plugin-api": "20.0.0",
+    "webapp3-plugin-select-cart": "file:",
     "webapp3-select-cart-plugin": "file:"
   },
   "devDependencies": {
